feat: add `request_assets_upload_v1` lambda
