# backend/api/gen/src/models/content_asset_dto.rs
@@ -1,0 +1,25 @@
+/*
+ * just-code-dev
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2023-03-10 06:01:08UTC
+ *
+ * Generated by: https://openapi-generator.tech
+ */
+
+#[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
+pub struct ContentAssetDto {
+    #[serde(rename = "id")]
+    pub id: String,
+    #[serde(rename = "url")]
+    pub url: String,
+    #[serde(rename = "mime")]
+    pub mime: String,
+}
+
+impl ContentAssetDto {
+    pub fn new(id: String, url: String, mime: String) -> ContentAssetDto {
+        ContentAssetDto { id, url, mime }
+    }
+}
