# backend/feature/content/domain/src/consts.rs
@@ -1,0 +1,1 @@
+pub const CONTENT_ASSETS_PREFIX: &str = "content/assets/";
